refactor: update database configuration to use DATABASE_URL and enhance .gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-# MySQL Database Configuration
-MYSQL_HOST=your-mysql-host
-MYSQL_USER=your-mysql-username
-MYSQL_PASSWORD=your-mysql-password
-MYSQL_DATABASE=unbirthday_db
-MYSQL_PORT=3306
+DATABASE_URL="mysql://user:passwd@server:3306/db"
+
