--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build:api": "tsc -b tsconfig.api.json",
+    "build": "tsc -b && vite build && npm run build:api",
     "lint": "eslint .",
     "preview": "vite preview"
   },
